<resources>

    <!-- Principales -->
    <string name="app_name">GotApp</string>

    <!-- Hints -->
    <string name="hint_enter_name">Introduce el nombre</string>
    <string name="hint_enter_family">Introduce la familia</string>
    <string name="hint_enter_house">Introduce la casa</string>
    <string name="hint_enter_title">Introduce el título</string>
    <string name="hint_enter_image_url">URL de la imagen</string>
    <string name="hint_enter_lastname">Introduce los apellidos</string>

    <!-- Etiquetas -->
    <string name="label_character_list">Lista de personajes</string>
    <string name="label_character_detail">Detalle personaje</string>
    <string name="label_character_new">Nuevo personaje</string>

    <!-- Descripciones -->
    <string name="desc_add_new_character">Añadir nuevo personaje</string>

    <!-- Mensajes -->
    <string name="message_character_delete">Eliminar personaje</string>
    <string name="message_character_deleted">Personaje eliminado.</string>
    <string name="message_prompt_character_will_be_deleted">El personaje seleccionado va a ser eliminado, ¿está seguro?</string>
    <string name="message_character_created_success">El personaje se ha creado correctamente.</string>
    <string name="message_character_updated_success">El personaje se ha actualizado correctamente.</string>
    <string name="message_characters_not_found">No se ha encontrado ningún personaje</string>

    <!-- Acciones -->
    <string name="action_save">Guardar</string>
    <string name="action_update">Actualizar</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_ok">Aceptar</string>
    <string name="action_search_image_on_the_internet">Buscar</string>

    <!-- Errores -->
    <string name="message_error_loading_characters">No se han podido cargar los datos. Compruebe que dispone de conexión a internet.</string>
    <string name="title_error_loading_characters">Error cargando personajes</string>

</resources>