<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_outline_check_white_24"
        android:orderInCategory="300"
        android:title="@string/action_update"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_outline_cancel_24"
        android:orderInCategory="300"
        android:title="@string/action_cancel"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:icon="@drawable/ic_outline_delete_white_24"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="300"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/action_edit"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>